fixed horizontal scroll bar

--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -49,6 +49,7 @@
   margin: 0 calc(-1 * var(--ifm-pre-padding));
   padding: 0 var(--ifm-pre-padding);
 }
+
 html {
   --post-title-color: #313131;
   --post-pub-date-color: #8c8c8c;
@@ -60,15 +61,35 @@ html[data-theme="dark"] {
   --post-pub-date-color: var(--ifm-color-gray-100);
   --divider-color: #353535;
   --ifm-toc-border-color: #313131;
+  
 }
 
+.hero {
+  /* height: calc(100vh - 45px); */
+  height: auto;
+  width: 100%;
+  padding: 10;
+  overflow-x: hidden;
+  margin: 0;
+  background-image: linear-gradient(40deg,
+      rgba(255, 255, 255, 0.8) 62%,
+      rgba(0, 132, 255, 0.1)),
+    url("/img/hero.svg");
+  background-repeat: no-repeat;
+  background-position: right center;
+  background-size: cover;
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  position: relative;
 
-[data-theme="dark"] .hero {
-  background-image: linear-gradient(
-      20deg,
+}
+
+html[data-theme="dark"] .hero {
+  background-image: linear-gradient(20deg,
       var(--ifm-background-color) 40%,
-      rgba(18, 55, 105, 0.85)
-    ),
+      rgba(18, 55, 105, 0.85)),
+    url("/img/hero.svg");
+    overflow-x: hidden;
 }
 
 .intro__name {
@@ -78,12 +99,32 @@ html[data-theme="dark"] {
 .footer {
   margin-top: 4em;
 }
+
+
 @media screen and (max-width: 1200px) {
   .hero {
     grid-template-columns: 1fr;
     height: auto;
     background-position: top;
+    overflow-x: hidden;
   }
+}
+
+
+.github-icon:before {
+  content: "";
+  width: 30px;
+  height: 30px;
+  display: flex;
+  background: url("/img/github.svg") no-repeat;
+}
+
+.discord-icon:before {
+  content: "";
+  width: 30px;
+  height: 30px;
+  display: flex;
+  background: url("/img/discord.svg") no-repeat;
 }
 
 /*
@@ -94,6 +135,7 @@ experiences
 .experience {
   padding: 6rem 0;
   background-color: var(--ifm-color-primary-lightest);
+  overflow-x: hidden;
 }
 
 html[data-theme="dark"] .experience {
@@ -153,9 +195,10 @@ html[data-theme="dark"] .active-btn {
   color: var(--ifm-color-primary-dark);
 }
 
- .experience-info {
+.experience-info {
   min-height: 420px;
-} 
+}
+
 .experience-infoh3 {
   font-weight: 400;
 }
@@ -167,6 +210,7 @@ html[data-theme="dark"] .active-btn {
   display: inline-block;
   padding: 0.375rem 0.75rem;
   border-radius: var(--radius);
+  overflow-x: hidden;
 }
 
 .experience-date {
@@ -179,11 +223,14 @@ html[data-theme="dark"] .active-btn {
   column-gap: 2rem;
   align-items: center;
   margin-bottom: 1.25rem;
+  overflow-x: hidden;
 }
 
 .experience-desc p {
   margin-bottom: 0;
   /* color: var(--ifm-color-grey-3); */
+  overflow: auto;
+  overflow: initial;
 }
 
 .experience-icon {
@@ -196,6 +243,8 @@ html[data-theme="dark"] .active-btn {
     display: grid;
     grid-template-columns: 200px 1fr;
     column-gap: 4rem;
+    overflow: auto;
+    overflow: initial;
   }
 
   .btn-container {
@@ -215,4 +264,3 @@ html[data-theme="dark"] .active-btn {
     box-shadow: -2px 0 var(--ifm-color-primary-Dark);
   }
 }
-
